// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateHTMLCode > should generate HTML fir empty ol block 1`] = `
"<ol class="ol-ol1">
  
</ol>"
`;

exports[`generateHTMLCode > should generate HTML for empty ol block 1`] = `
"<ol class="ol-ol1">
  
</ol>"
`;

exports[`generateHTMLCode > should generate HTML for ol block 1`] = `
"<ol class="ol-ol1">
   <li >item1</li>
 <li >item2</li>
</ol>"
`;
